--- a/test.html
+++ b/test.html
@@ -46,5 +46,14 @@
     </button>
     <button class="cui-button">欢迎使用connect UI</button>
 
+    <div class="cui-dropdownbutton">
+        <button onclick="cuidroplist()" class="cui-dropmenu">下拉菜单</button>
+          <div id="cuidroplist" class="cui-dropmenu-content">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+          </div>
+        </div>
+
   </body>
 </html>
