α 0.0.0.3 新增加input属性的适配，新增加加载动画

--- a/test.html
+++ b/test.html
@@ -60,14 +60,25 @@
           </div>
         </div>
 
-        <!--<button class="cui-button" onclick="cuisnackbarshow()">点击后有魔法</button>
-
-        <div class="cui-snackbar" id="cuisnackbar">popup!snackbar! 
-        </div> -->
-
         <button onclick="cuisnackbarshow()" class="cui-button">显示 Snackbar</button>
 
         <div id="cuisnackbar">一些文本..</div>
 
+        <h2>input元素</h2>
+        <form>
+          <p class="cui-p-input">账户</p> <input  class="cui-input" type="username" name="username" placeholder="用户名" aria-label="请在此处输入用户名">
+        </form>
+        <form>
+          <p class="cui-p-input">密码</p> <input  class="cui-input" type="password" name="password" placeholder="密码" aria-label="请在此处输入密码">
+        </form>
+        <form>
+          <p class="cui-p-input">选色</p> <input  class="cui-input-color" type="color" name="color" placeholder="选色器" aria-label="在此处选择颜色">
+        </form>
+
+        <h2>世界最伟大发明！圆圈加载！咕噜咕噜！</h2>
+        <div class="cui-loading"></div>
+        <div class="cui-stopwatch">
+          <div class="cui-stopwatch-advance"></div>
+        </div>
   </body>
 </html>
