--- a/test.html
+++ b/test.html
@@ -41,14 +41,6 @@
     <h1> 测试 </h1>
     <h2>测试测试测试</h2>
     <p>众多组件和特色，都在互通设计内，我们期待您的加入，我们知道我们做不到由一个团队完成一个庞大的设计标准，因此，我们邀请您共建互通设计， 一同设计互通设计的各个组件和布局，完善互通设计的web组件包，一同前进吧。我们欢迎各位一同构建全新的互通设计和connect UI，互通设计与connect UI均以CC 1.0 协议进行许可。</p>
-    <button class="cui-round-button">
-      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-        <g id="组_596" data-name="组 596" transform="translate(-333 -227)">
-          <path id="路径_609" data-name="路径 609" d="M4,0H36a4,4,0,0,1,4,4V36a4,4,0,0,1-4,4H4a4,4,0,0,1-4-4V4A4,4,0,0,1,4,0Z" transform="translate(333 227)" fill="none" opacity="0"/>
-          <path id="路径_194" data-name="路径 194" d="M-10462,15.575V14.482a4.073,4.073,0,0,1,4.373-4.369c2.9.034,3.687.825,7.511.825s4.883-.876,7.786-.825a4.114,4.114,0,0,1,4.369,4.369v1.093c0,5.431-6.146,9.425-12.155,9.425S-10462,21.006-10462,15.575Zm5.327-12.881a6.559,6.559,0,0,1,6.557-6.558,6.557,6.557,0,0,1,6.555,6.558,6.555,6.555,0,0,1-6.555,6.556A6.556,6.556,0,0,1-10456.674,2.694Z" transform="translate(10803 236)" fill="#fff"/>
-        </g>
-      </svg>
-    </button>
     <button class="cui-button">欢迎使用connect UI</button>
 
     <div class="cui-dropdownbutton">
@@ -62,7 +54,7 @@
 
         <button onclick="cuisnackbarshow()" class="cui-button">显示 Snackbar</button>
 
-        <div id="cuisnackbar">一些文本..</div>
+        <div id="cuisnackbar"> 从结果看过程是不合理的</div>
 
         <h2>input元素</h2>
         <form>
@@ -71,14 +63,23 @@
         <form>
           <p class="cui-p-input">密码</p> <input  class="cui-input" type="password" name="password" placeholder="密码" aria-label="请在此处输入密码">
         </form>
+        <p>看起来我们遇到了一些技术难题，这将会在下一个版本修复。</p>
         <form>
           <p class="cui-p-input">选色</p> <input  class="cui-input-color" type="color" name="color" placeholder="选色器" aria-label="在此处选择颜色">
         </form>
-
-        <h2>世界最伟大发明！圆圈加载！咕噜咕噜！</h2>
+        <form>
+          <p class="cui-p-input">checkbox</p> <input class="cui-input-checkbox" type="checkbox" name="checkbox" placeholder="检查表" aria-label="选择是否启用" checked="checked">
+          <i class="cui-checkedbox"></i>
+        </form>
+        <p>嗯......check表单还在测试，我们将会尽快推送更多的特性。</p>
+        <h2>加载</h2>
         <div class="cui-loading"></div>
         <div class="cui-stopwatch">
           <div class="cui-stopwatch-advance"></div>
         </div>
+        <h2>icons</h2>
+        <span class="cui-right"> 礼物！</span>
+        <span class="cui-wrong"> 有意思！</span>
+        <p>很高兴告诉各位，互通设计的图标也将会慢慢字体化，使用会更便利。</p>
   </body>
 </html>
