--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
     </div>
     <div class="cui-pop-up-prompt">
       本页用于测试新特性，如果需要反馈问题，请前往discussions
-      <span class="cui-parendisplay" onclick="this.parentElement.style.display='none'"></span>
+      <span class="cui-parendisplay" onclick="this.parentElement.style.display='none'"></span>
     </div>
     <h1> 测试 </h1>
     <h2>测试测试测试</h2>
@@ -72,14 +72,26 @@
           <label for='checkbox1'>GOOD JOB!</label>
         </div>
 
+        <form>
+          <p class="cui-p-input">滑块</p>
+          <p class="cui-p-input">连续滑块</p>
+          <label class=".cui-input-slider">
+          <input type="range" step="0.1" min="0" max="100">
+          <p>我们仍在尝试更多的表单功能，滑块暂未完成。</p>
+        </form>
+
         <h2>加载</h2>
         <div class="cui-loading"></div>
         <div class="cui-stopwatch">
           <div class="cui-stopwatch-advance"></div>
         </div>
         <h2>icons</h2>
-        <span class="cui-right"></span>
-        <span class="cui-wrong"></span>
+        <span class="cui-our-font"></span>
+        <span class="cui-our-font"></span>
+        <span class="cui-our-font"></span>
+        <span class="cui-our-font"></span>
+        <span class="cui-our-font"></span>
+        <span class="cui-our-font"></span>
         <p>很高兴告诉各位，互通设计的图标也将会慢慢字体化，使用会更便利。</p>
   </body>
 </html>
