--- a/test.html
+++ b/test.html
@@ -58,13 +58,13 @@
 
         <h2>input元素</h2>
         <form>
-          <p class="cui-p-input">账户</p> <input  class="cui-input" type="username" name="username" placeholder="用户名" aria-label="请在此处输入用户名">
+          <label class="cui-label-input">账户</label> <input  class="cui-input" type="username" name="username" placeholder="用户名" aria-label="请在此处输入用户名">
         </form>
         <form>
-          <p class="cui-p-input">密码</p> <input  class="cui-input" type="password" name="password" placeholder="密码" aria-label="请在此处输入密码">
+          <label class="cui-label-input">密码</label> <input  class="cui-input" type="password" name="password" placeholder="密码" aria-label="请在此处输入密码">
         </form>
         <form>
-          <p class="cui-p-input">选色</p> <input  class="cui-input-color" type="color" name="color" placeholder="选色器" aria-label="在此处选择颜色">
+        <input  class="cui-input-color" type="color" name="color" placeholder="选色器" aria-label="在此处选择颜色">
         </form>
 
         <div class='cui-checkbox'>
@@ -85,8 +85,8 @@
         </div>
 
         <form>
-          <p class="cui-p-input">滑块</p>
-          <p class="cui-p-input">连续滑块</p>
+          <p class="cui-label-input">滑块</p>
+          <p class="cui-label-input">连续滑块</p>
           <input type="range" min="0" max="100" step="1" value="50" class="cui-input-range">
           <p>我们仍在尝试更多的表单功能，还有一些形式的滑块暂未完成。</p>
         </form>
