--- a/test.html
+++ b/test.html
@@ -40,8 +40,8 @@
     </div>
     <h1> 测试 </h1>
     <h2>测试测试测试</h2>
-    <p>众多组件和特色，都在互通设计内，我们期待您的加入，我们知道我们做不到由一个团队完成一个庞大的设计标准，因此，我们邀请您共建互通设计， 一同设计互通设计的各个组件和布局，完善互通设计的web组件包，一同前进吧。我们欢迎各位一同构建全新的互通设计和connect UI，互通设计与connect UI均以CC 1.0 协议进行许可。</p>
-    <button class="cui-button">欢迎使用connect UI</button>
+    <p>众多组件和特色，都在互通设计内，我们期待您的加入，我们知道我们做不到由一个团队完成一个庞大的设计标准，因此，我们邀请您共建互通设计， 一同设计互通设计的各个组件和布局，完善互通设计的web组件包，一同前进吧。我们欢迎各位一同构建全新的互通设计和Connect UI，互通设计与Connect UI均以CC 1.0 协议进行许可。</p>
+    <button class="cui-button">欢迎使用Connect UI</button>
 
     <div class="cui-dropdownbutton">
         <button onclick="cuidroplist()" class="cui-dropmenu">下拉菜单</button>
@@ -84,6 +84,11 @@
           <label for='checkbox4'>GOOD JOB!</label>
         </div>
 
+      <div class='cui-switch-wrap'>
+          <input type='checkbox' id='switch' class="cui-original-input">
+          <label for='switch'></label>
+      </div>
+
         <form>
           <p class="cui-label-input">滑块</p>
           <p class="cui-label-input">连续滑块</p>
@@ -95,6 +100,35 @@
         <div class="cui-loading"></div>
         <div class="cui-stopwatch">
           <div class="cui-stopwatch-advance"></div>
+        </div>
+        <h2>info card</h2>
+        <div class="cui-info-card">
+          <img src="https://pic.imgdb.cn/item/613b57c344eaada73933c045.jpg" class="cui-auto-img-card">
+          <h3>
+            过去的，已经过去，现在的，还在发生。
+          </h3>
+          <p>卡片永远都是好的，我们欢迎各位一同构建全新的互通设计和Connect UI，互通设计与Connect UI均以CC 1.0 协议进行许可。</p>
+        </div>
+        <div class="cui-info-card">
+          <img src="https://pic.imgdb.cn/item/613b57c344eaada73933c045.jpg" class="cui-auto-img-card">
+          <h3>
+            过去的，已经过去，现在的，还在发生。
+          </h3>
+          <p>卡片永远都是好的，我们欢迎各位一同构建全新的互通设计和Connect UI，互通设计与Connect UI均以CC 1.0 协议进行许可。</p>
+        </div>
+        <div class="cui-info-card">
+          <img src="https://pic.imgdb.cn/item/613b57c344eaada73933c045.jpg" class="cui-auto-img-card">
+          <h3>
+            过去的，已经过去，现在的，还在发生。
+          </h3>
+          <p>卡片永远都是好的，我们欢迎各位一同构建全新的互通设计和Connect UI，互通设计与Connect UI均以CC 1.0 协议进行许可。</p>
+        </div>
+        <div class="cui-info-card">
+          <img src="https://pic.imgdb.cn/item/613b57c344eaada73933c045.jpg" class="cui-auto-img-card">
+          <h3>
+            过去的，已经过去，现在的，还在发生。
+          </h3>
+          <p>卡片永远都是好的，我们欢迎各位一同构建全新的互通设计和Connect UI，互通设计与Connect UI均以CC 1.0 协议进行许可。</p>
         </div>
         <h2>icons</h2>
         <span class="cui-our-font"></span>
