--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <script src="cui.js" defer></script>
     <title>测试页面</title>
 </head>
-<body class="cui-if-use-tab-and-sidebar" oncontextmenu="openmenu(event)">
+<body class="cui-if-use-tab-and-sidebar">
 
     <div class="cui-tab">
         <h2 class="cui-LOGO-on-tab">测试 LOGO (文字)</h2>
@@ -35,30 +35,30 @@
             </div>
     </div>
 
-    <div class="cui-sidebar">
-      <h2>中台</h2>
-      <input  class="cui-input" type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" style="margin-bottom: 10px; ;">
-              <a href="#home" class="cui-a-active for-slider"> <span class="cui-our-font"></span> Home</a>
-              <a href="#about"class="for-slider"> <span class="cui-our-font"></span>About</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact"class="for-slider" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" class="for-slider"> <span class="cui-our-font"></span>Contact</a>
-      <p class="cui-sidebar-tips">中台小提示，好用和好用</p>
+    <div class="cui-sidebar ">
+      <h2>Connect UI 工作台</h2>
+      <input  class="cui-input search" type="text" name="text" placeholder=" 搜索" aria-label="请在此处搜索" autocomplete=”off” style="margin-bottom: 10px; ;">
+              <a href="#home" class="cui-a-active for-slider "> <span class="cui-our-font"></span> Home</a>
+              <a href="#about"class="for-slider "> <span class="cui-our-font"></span>About</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact"class="for-slider " > <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+              <a href="#contact" class="for-slider "> <span class="cui-our-font"></span>Contact</a>
+      <p class="cui-sidebar-tips">侧边栏小提示，好用和好用</p>
   </div>
 
 
     <div class="cui-pop-up-prompt">
       本页用于测试新特性，如果需要反馈问题，请前往discussions
-      <span class="cui-parendisplay" onclick="this.parentElement.style.display='none'"></span>
+      <span class="cui-parendisplay" onclick="this.parentElement.style.display='none'"></span>
     </div>
     <h1> 测试 </h1>
     <h2>测试测试测试</h2>
@@ -67,7 +67,7 @@
     <button class="cui-button"><span class="cui-our-font"></span>欢迎使用Connect UI</button>
 
     <div class="cui-dropdownbutton">
-        <button onclick="cuidroplist()" class="cui-dropmenu">下拉菜单</button>
+        <button onclick="cuidroplist()" class="cui-dropmenu">下拉菜单 <span></span></button>
           <div id="cuidroplist" class="cui-dropmenu-content">
             <a href="#home">Home</a>
             <a href="#about">About</a>
@@ -176,13 +176,8 @@
         </div>
         </div>
         <h2>icons</h2>
-        <span class="cui-our-font"></span>
-        <span class="cui-our-font"></span>
-        <span class="cui-our-font"></span>
-        <span class="cui-our-font"></span>
-        <span class="cui-our-font"></span>
-        <span class="cui-our-font"></span>
-        <span class="cui-our-font"></span>
+        <span class="cui-our-font">                        </span>
+
         <p>很高兴告诉各位，互通设计的图标也将会慢慢字体化，使用会更便利。</p>
   </body>
 </html>
