--- a/test.html
+++ b/test.html
@@ -13,78 +13,82 @@
     <div class="cui-tab">
         <h2 class="cui-LOGO-on-tab">LOGO</h2>
 
-        <form action="https://cn.bing.com/search?q" method="get" class="cui-input-from" style="width: 500px;">
-          <input  class="cui-input" type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" style="margin: 0px;width: 100%;border-radius: 0px;border-top-left-radius: 4px;border-bottom-left-radius: 4px;border-right-width: 0px;">  
-          <input type="submit" value="" class="cui-search-go" style="font-family: 'OUR-FONT-ICON';"/>
+        <form action="https://cn.bing.com/search?q" method="get" class="cui-search" style="max-width: 500px;width: 100%;">
+          <input  type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" >  
+          <input type="submit" value="" />
         </form>
 
         <div class="cui-cui-title-tab-group">
         <h2 class="cui-title-on-tab" style="margin-right: 0px;">测试 Tab</h2>
         </div>
+        <div class="cui-drpolist-and-tab-little-button">
+          <button class="cui-little-button" onclick="cuidroplist2()">
+            <span></span>
+          </button>
+        </div>
+        <div id="cuidroplisttab" class="cui-droplist">
+          <span onclick="cuidroplist2()" ></span>
+          <form action="https://cn.bing.com/search?q" method="get" class="cui-search" style="max-width: 500px;width: auto;">
+            <input  type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" >  
+            <input type="submit" value="" />
+          </form>
+
+          <a class="cui-a" href="#home">Home</a>
+          <a class="cui-a" href="#about">About</a>
+          <a class="cui-a" href="#contact">Contact</a>
+        </div>
+
 
     </div>
-<!--     <div class="cui-sidebar ">
-      <h2>Connect UI 工作台</h2>
-      <input  class="cui-input search" type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" style="margin-bottom: 10px;">
-
-              <a href="#home" class="cui-a-active for-slider "> <span class="cui-our-font"></span> Home</a>
-              <a href="#about"> <span class="cui-our-font"></span>About</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-              <a href="#contact" > <span class="cui-our-font"></span>Contact</a>
-
-      <p class="cui-sidebar-tips">侧边栏小提示，好用和好用</p>
-  </div> -->
-
 
 
     <div class="cui-pop-up-prompt">
       <div>
-        <span class="cui-our-font"></span>
+        <span></span>
         本页用于测试新特性，如果需要反馈问题，请前往discussions
       </div>
-      <span class="cui-our-font"  onclick="this.parentElement.style.display='none'"></span>
+      <span onclick="this.parentElement.style.display='none'"></span>
     </div>
-    <h1> 测试 </h1>
+    <h1 class="cui-helper-display-flax-row"> 测试  </h1>
     <h2>测试测试测试</h2>
     <p>众多组件和特色，都在互通设计内，我们期待您的加入，我们知道我们做不到由一个团队完成一个庞大的设计标准，因此，我们邀请您共建互通设计， 一同设计互通设计的各个组件和布局，完善互通设计的web组件包，一同前进吧。我们欢迎各位一同构建全新的互通设计和Connect UI，互通设计与Connect UI均以CC 1.0 协议进行许可。</p>
-    <div class="cui-helper-display-flax">
       <button class="cui-button" style="margin-right: 20px;">欢迎使用Connect UI</button>
       <button class="cui-button" style="margin-right: 20px;"><span class="cui-our-font"></span>欢迎使用Connect UI</button>
-      <button class="cui-button cui-helper-display-flax-jcs-sb" ><div class="cui-loading"> </div>test</div></button></div>
+      <button class="cui-button cui-helper-display-flax-loading-buttton" ><div class="cui-loading"> </div>test</div></button>
 
-    <button class="cui-big-button-background" style="margin-bottom: 20px;">
+    <button class="cui-big-button" style="margin-bottom: 20px;">
       <div>
-        <span class="cui-our-font"></span>
+        <span></span>
         <p>前往文件管理</p>
       </div>
-      <span class="cui-our-font"></span>
+      <span></span>
+    </button>
+    <button class="cui-big-button" style="margin-bottom: 20px;">
+      <div>
+        <span></span>
+        <p>关于</p>
+      </div>
+      <span></span>
+    </button>
+    <button class="cui-big-button" style="margin-bottom: 20px;">
+      <div>
+        <span></span>
+        <p>聊天</p>
+      </div>
+      <span></span>
     </button>
     <div class="cui-dropdownbutton">
         <button onclick="cuidroplist()" class="cui-dropmenu">下拉菜单 <span></span></button>
           <div id="cuidroplist" class="cui-dropmenu-content">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a class="cui-a" href="#home">Home</a>
+            <a class="cui-a" href="#about">About</a>
+            <a class="cui-a" href="#contact">Contact</a>
           </div>
         </div>
 
         <button onclick="cuisnackbarshow()" class="cui-button" style="margin-right: 20px;">显示 Snackbar</button>
-        <button onclick="cuisnackbarshowyellow()" class="cui-button" style="margin-right: 20px;">显示 Snackbar(y)</button>
-        <button onclick="cuisnackbarshowred()" class="cui-button">显示 Snackbar(r)</button>
 
-        <div id="cuisnackbar"> <span class="cui-our-font"></span> 从结果看过程是不合理的</div>
-        <div id="cuisnackbaryellow"> 从结果看过程是不合理的</div>
-        <div id="cuisnackbaryellow"> 从结果看过程是不合理的</div>
+        <div id="cuisnackbar"> <span></span> 从结果看过程是不合理的</div>
 
         <h2>input元素</h2>
         <form class="cui-input-from">
@@ -93,15 +97,29 @@
         <form class="cui-input-from">
           <label class="cui-label">密码</label> <input  class="cui-input" type="password" name="password" placeholder="密码" aria-label="请在此处输入密码">
         </form>
-        <form class="cui-input-from">
-          <label class="cui-label cui-our-font"></label>
-          <input  class="cui-input" type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" style="margin-bottom: 10px;">  
+        <form action="https://cn.bing.com/search?q" method="get" class="cui-search" style="margin-top: 20px;">
+          <input  type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" >  
+          <input type="submit" value="" />
         </form>
+        <h3>input group</h3>
+        <div class="cui-input-group">
 
+        <form class="cui-input-from">
+          <label class="cui-label">账户</label> <input  class="cui-input" type="username" name="username" placeholder="用户名" aria-label="请在此处输入用户名">
+        </form>
+        <form class="cui-input-from">
+          <label class="cui-label">密码</label> <input  class="cui-input" type="password" name="password" placeholder="密码" aria-label="请在此处输入密码">
+        </form>
+        <form action="https://cn.bing.com/search?q" method="get" class="cui-search">
+          <input  type="text" name="text" placeholder="搜索" aria-label="请在此处搜索" >  
+          <input type="submit" value="" />
+        </form>
+        
+        </div>
 
         <form>
-        <input  class="cui-input-color" type="color" name="color" placeholder="选色器" aria-label="在此处选择颜色">
-        </form>
+          <input  class="cui-input-color" type="color" name="color" placeholder="选色器" aria-label="在此处选择颜色">
+          </form>
 
         <div class='cui-checkbox'>
           <input type='checkbox' id='checkbox1' name='checkboox[]'>
@@ -145,12 +163,16 @@
       </div>
 
 
-        <form>
-          <p class="cui-label">滑块</p>
-          <p class="cui-label">连续滑块</p>
-          <input type="range" min="0" max="100" step="1" value="50" class="cui-input-range">
-          <p>我们仍在尝试更多的表单功能，还有一些形式的滑块暂未完成。</p>
-        </form>
+          <h2 class="cui-label">滑块</h2>
+          <h3 class="cui-label">连续滑块</h3>
+          <input class="cui-input-range" type="range" min="0" max="100">
+          <div class="cui-pop-up-prompt">
+            <div>
+              <span></span>
+              Co-authored-by: hyroge <3038094028@qq.com>
+              </div>
+          </div>
+
           <h1>
             更多输入
           </h1>
@@ -182,13 +204,49 @@
         <span class="cui-our-font">                        </span>
 
         <p>很高兴告诉各位，互通设计的图标也将会慢慢字体化，使用会更便利。</p>
+        <h2>代码块以及引用</h2>
+        <pre class="cui-pre pre-skin-code" style="margin-bottom: 20px;">
+          <code><span>transform: matrix(1.0, 2.0, 3.0, 4.0, 5.0, 6.0);
+            transform: translate(12px, 50%);
+            transform: translateX(2em);
+            transform: translateY(3in);
+            transform: scale(2, 0.5);
+            transform: scaleX(2);
+            transform: scaleY(0.5);
+            transform: rotate(0.5turn);
+            transform: skew(30deg, 20deg);
+            transform: skewX(30deg);
+            transform: skewY(1.07rad);
+            transform: matrix3d(1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0);
+            transform: translate3d(12px, 50%, 3em);
+            transform: translateZ(2px);
+            transform: scale3d(2.5, 1.2, 0.3);
+            transform: scaleZ(0.3);
+            transform: rotate3d(1, 2.0, 3.0, 10deg);
+            transform: rotateX(10deg);
+            transform: rotateY(10deg);
+            transform: rotateZ(10deg);
+            transform: perspective(17px);
+          </span></code>
+        </pre>
+        <pre class="cui-pre" style="margin-bottom: 20px;">
+          <span>Huton design是一个设计标准，包含互通设计和 Connect UI，坚持着「美观促进效率，为所有人提供舒适的世界」的理念设计。
+          </span>
+        </pre>
 
-        <button class="cui-big-button-background">
+        <button class="cui-big-button"  style="margin-bottom: 20px;">
           <div>
-            <span class="cui-our-font"></span>
+            <span></span>
             <p>前往我们的 Github 仓库</p>
           </div>
-          <span class="cui-our-font"></span>
+          <span></span>
+        </button>
+        <button class="cui-big-button" id="sharingcui">
+          <div>
+            <span></span>
+            <p>分享 hutong design 官网</p>
+          </div>
+          <span></span>
         </button>
   </body>
 </html>
