--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="cui.css">
     <script src="cui.js" defer></script>
-    <title>测试页面</title>
+    <title>贡献者列表</title>
 </head>
 <body class="cui-if-use-tab">
 
